...
                                <fontDescription key="fontDescription" name="SourceSansPro-Bold" family="Source Sans Pro" pointSize="18"/>
                                <inset key="contentEdgeInsets" minX="0.0" minY="15" maxX="0.0" maxY="15"/>
                                <state key="normal" title="Done">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kNc-E5-IkQ" userLabel="Down Arrow Button">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="54"/>
                                <accessibility key="accessibilityConfiguration" hint="When clicked, this will slide modal screen down and away." label="Down arrow button"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="Down Arrow Button">
...
                                                <rect key="frame" x="20" y="130" width="374" height="32"/>
                                                <segments>
                                                    <segment title="Sign up"/>
                                                    <segment title="Sign in"/>
                                                </segments>
                                                <connections>
...
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Full name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PEY-vW-qu1">
                                                                <rect key="frame" x="0.0" y="0.0" width="374" height="22"/>
                                                                <accessibility key="accessibilityConfiguration" hint="Displays the label above the full name text field" label="Full name label">
                                                                    <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                                                </accessibility>
...
                                                                <nil key="highlightedColor"/>
                                                            </label>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Jane Smith" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="10h-Nb-0XN">
                                                                <rect key="frame" x="0.0" y="26" width="374" height="40"/>
                                                                <accessibility key="accessibilityConfiguration" hint="Displays the full name text field under the full name label" label="Full name text field"/>
...
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ux6-u6-N28">
                                                                <rect key="frame" x="0.0" y="0.0" width="374" height="22"/>
                                                                <accessibility key="accessibilityConfiguration" hint="Displays the label above the email text field" label="Email address label">
                                                                    <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                                                </accessibility>
...
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Confirm Password Error Message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ve3-It
                                                                <rect key="frame" x="0.0" y="70" width="374" height="18"/>
                                                                <accessibility key="accessibilityConfiguration" hint="Displays an error message if confirm password text field is invalid" label="Confirm password error message">
                                                                    <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                                                </accessibility>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mKe-xP-9Fu">
                                                <rect key="frame" x="20" y="643" width="374" height="31"/>
                                                <accessibility key="accessibilityConfiguration" hint="Displays a new screen to request to eset your password" label="Forgot password button"/>
                                                <fontDescription key="fontDescription" name="FrankRuhlLibre-Regular" family="Frank Ruhl Libre" pointSize="14"/>
                                                <state key="normal" title="Forgot your password?">
...
                                                </connections>
                                            </button>
                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BetterReads-Logo_Orange" translatesAutoresizingMaskIntoConstraints="NO" id="KfD-Ub-2Cw">
                                                <rect key="frame" x="20" y="40" width="374" height="50"/>
                                                <accessibility key="accessibilityConfiguration" hint="Displays the logo at the top of the screen" label="BetterReads Logo">
...
